# dmr-codeplug-gen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEBUG_MODE.md  Makefile  README.md  TODO.md  codeplug.py  generate_html.py  pyproject.toml
.devcontainer/: Dockerfile
blank_radio/: uv878_base.yml
codeplug/: aggregators.py  anytone.py  callsign_matchers.py  cli.py  codeplug.py  filters.py  formatters.py  generators.py  models.py  outputs.py  utils.py  writers.py
codeplug/datasources/: brandmeister.py  cache.py  przemienniki.py  repeaterbook.py
codeplug/generators/: __init__.py  analogchan.py  aprs.py  channels.py  contacts.py  digitalchan.py  grouplists.py  location_zones.py  roaming.py  rxgrouplists.py  scanlists.py  zones.py
codeplug/recipes/: __init__.py  nyc.py  poland.py  usa.py
data/: pl_2m_dmr.xml  pl_2m_fm.xml  pl_70cm_dmr.xml  pl_70cm_fm.xml
data_static/: brandmeister_unlisted_talkgroups.json
docs/: band_filter_migration.md  distance_sorting.md  filter_chain_refactoring.md  location_zones.md  rxgrouplists.md
tests/: test_aprs_base_recipe.py  test_band_filter.py  test_debug_mode.py  test_distance_filter.py  test_distance_sorting.py  test_integration_location_zones.py  test_location_zones.py  test_rxgrouplists.py
