[tool.poetry]
name = "dmr-codeplug-pl"
version = "0.1.0"
description = ""
authors = ["Jan Szumiec <jan.szumiec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
