[tool.poetry]
name = "dmr-codeplug-pl"
version = "0.1.0"
description = ""
authors = ["Jan Szumiec <jan.szumiec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Unidecode = "^1.3.6"
maidenhead = "^1.7.0"
pyyaml = "^6.0.1"
requests = "^2.32.4"
lxml = "^6.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
